ds/ro - checking overwrite

--- a/cookbooks/nginx_configurations/templates/default/redirect_root_domain.conf.erb
+++ b/cookbooks/nginx_configurations/templates/default/redirect_root_domain.conf.erb
@@ -1,3 +1,4 @@
+# Redirect non-www requests to www.x
 server {
   <%= "server_name #{@server_name.gsub('www.', '')};" %>
   <%= "rewrite ^(.*) http://#{@server_name}$1 permanent;" %>
